# rag-research-assistant

./: .env.example  .env.neon  .gitignore  Dockerfile  README.md  README_PRODUCTION.md  docker-compose.yml  main.py  prepare_github.py  pyproject.toml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/schemas/: api_schemas.py  query.py
backend/app/services/: llm_service.py  memory_client.py  orchestrator.py  retrieval_client.py
backend/app/utils/: production_logger.py  rate_limiter.py
backend/memory/: README.md
backend/memory/cache/: cache_keys.py  recent_cache.py
backend/memory/config/: db.py  redis.py
backend/rag_engine/: README.md  test.py
backend/scripts/: ingest.py  test_loader.py
data/eval/: queries.json
data/vector_store/: chunks.json  manifest.json
frontend/: README.md  package-lock.json  package.json
infra/ci-cd/: github-actions.yml
infra/cloud-run/: deploy.sh  service.yaml
infra/env/: backend.env.example  frontend.env.example
infra/scripts/: build_backend.sh  deploy_backend.sh  push-to-registry.sh  push_backend.sh
rag_engine/embeddings/: base.py
scripts/: bulk_ingest.py  eval.py  final_system_test.py  generate_sample_data.py  list_models.py  load_test_api.py  production_readiness_audit.py  prune_memory.py  test_adaptive_memory.py  test_chunking.py  test_chunking_stats.py  test_hybrid.py  test_ingestion.py  test_query.py  test_rerank.py  test_retrieval.py  test_semantic_memory.py  test_unified_intelligence.py  test_vectorless.py  verify_production_pipeline.py
(+131 files in other folders)
