[project]
name = "rag-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "faiss-cpu>=1.13.2",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "orjson>=3.11.7",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "redis>=7.3.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "trafilatura>=2.0.0",
]
